commit with home page register button redirection issue based on user devices,heart rate image changes in user dashboard controller,exercise type overlap issue in user dashboard...

--- a/css/custom-inputs.css
+++ b/css/custom-inputs.css
@@ -15,7 +15,7 @@
     display: inline-block;
     margin-right: 7px;
     margin-bottom: 7px;
-    padding-left: 40px;
+    padding-left: 37px;
     background-color: transparent !important;
     position: relative;
     cursor: pointer;
